# WhisperBridge

./: .env.example  .gitignore  .kiloignore  2.7.0  6.5.0  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_RECOMMENDATIONS.md  INTEGRATION_PLAN.md  README.UA.md  README.md  THREADS_SIGNALS.md  TR.MD  WhisperBridge.spec  build.py  debug_overlay_test.py  diagnose_ocr.py  gemini.md  ocr_comparison_report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_easyocr_simple.py  test_final_overlay.py  test_gpt_models.py  test_ocr_comparison.py  test_ocr_diagnostics.py  test_ocr_simple.py  test_overlay.py  test_paddleocr.py  test_paddleocr_debug.py  test_real_scenario.py  test_simple_overlay.py  test_translation_integration.py  test_workers.py
.github/workflows/: build.yml
docs/: ARCHITECTURE_GUIDELINES.md  CHANGELOG.md  CONFIGURATION.md  EXAMPLES.md  INSTALLATION.md  PROJECT.md  README.md  THREADING_RECOMMENDATIONS.md  THREADS_SIGNALS.md  TROUBLESHOOTING.md  UI_CONFIGURATION_GUIDELINES.md  USER_GUIDE.md
docs/fix/: OCR_Notification_Fix.md
rthooks/: ssl_certifi.py
scripts/: copy_translate_diagnostic.py  run_qt_app.py
src/: __init__.py  main.py
src/whisperbridge/: __init__.py  _version.py
src/whisperbridge/assets/: style.qss
src/whisperbridge/core/: __init__.py  api_manager.py  config.py  keyboard_manager.py  logger.py  model_limits.py  ocr_manager.py  settings_manager.py  version.py
src/whisperbridge/core/api_manager/: __init__.py  cache.py  errors.py  manager.py  models.py  providers.py  requests.py  types.py
src/whisperbridge/models/: __init__.py
src/whisperbridge/providers/: __init__.py  deepl_adapter.py  google_chat_adapter.py  openai_adapter.py
src/whisperbridge/services/: __init__.py  app_services.py  clipboard_service.py  config_service.py  config_workers.py  copy_translate_service.py  hotkey_service.py  notification_service.py  ocr_service.py  ocr_translation_service.py  overlay_service.py  overlay_service_qt.py  paste_service.py  screen_capture_service.py  theme_service.py  translation_service.py  tray_service.py  ui_service.py
src/whisperbridge/ui/: __init__.py  app.py  main_window.py  overlay_window.py  selection_overlay.py
src/whisperbridge/ui/components/: __init__.py  hotkey_input.py  language_selector.py  prompt_editor.py
src/whisperbridge/ui_qt/: __init__.py  app.py  base_window.py  main_window.py  minibar_overlay.py  overlay_ui_builder.py  overlay_ui_components.py  overlay_window.py  reader_window.py  selection_overlay.py  settings_dialog.py  settings_ui_factory.py  styled_overlay_base.py  tray.py  widget_factory.py  workers.py
src/whisperbridge/ui_qt/widgets/: hotkey_edit.py  placeholder_text_edit.py
src/whisperbridge/utils/: __init__.py  api_utils.py  config_utils.py  help_texts.py  icon_manager.py  image_utils.py  keyboard_utils.py  language_utils.py  overlay_utils.py  screen_utils.py  translation_utils.py  window_utils.py
src/whisperbridge/utils/archive/: api_utils.py
tests/: __init__.py  conftest.py  final_test.py  interactive_hotkey_test.py  simple_text_window.py  test_cache.py  test_clipboard_paste_integration.py  test_config.py  test_copy_translate_service.py  test_deepl_infrastructure.py  test_env_reading.py  test_errors.py  test_full_workflow.py  test_google_chat_adapter.py  test_gui.py  test_keyboard_utils_vk.py  test_language_detection.py  test_manager.py  test_model_limits.py  test_models.py  test_ocr_debug.py  test_ocr_integration.py  test_ocr_llm.py  test_openai_adapter.py  test_placeholder_text_edit.py  test_providers.py  test_requests.py  test_screen_capture_multimonitor.py  test_screen_utils_multimonitor.py  test_selection_overlay_multimonitor.py  test_settings_persistence.py  test_singleton.py  test_suite.py  test_token_integration.py  test_translator_dialog.py  test_ui_service_ocr_selection.py  test_widget_factory.py  test_worker_timeout.py  test_workers.py  verify_config.py
tests/integration/: test_api_manager_integration.py
tests/test_core/: __init__.py
tests/test_services/: __init__.py  test_integration.py  test_screen_capture_service.py  test_screen_utils.py
tests/test_ui/: __init__.py
